syntax = "proto3";
package plugin;

option go_package = "github.com/scttfrdmn/snoozebot/pkg/plugin";

// VersionService provides version information and compatibility checking
service VersionService {
  // GetAPIVersion returns the API version implemented by the plugin
  rpc GetAPIVersion(GetAPIVersionRequest) returns (GetAPIVersionResponse);
  
  // GetVersionInfo returns detailed version information about the plugin
  rpc GetVersionInfo(GetVersionInfoRequest) returns (GetVersionInfoResponse);
  
  // CheckCompatibility checks if the plugin is compatible with the host
  rpc CheckCompatibility(CheckCompatibilityRequest) returns (CheckCompatibilityResponse);
}

// GetAPIVersionRequest is the request for getting API version
message GetAPIVersionRequest {}

// GetAPIVersionResponse is the response for getting API version
message GetAPIVersionResponse {
  string api_version = 1;
}

// GetVersionInfoRequest is the request for getting version info
message GetVersionInfoRequest {}

// GetVersionInfoResponse is the response for getting version info
message GetVersionInfoResponse {
  string api_version = 1;
  string plugin_version = 2;
  string plugin_name = 3;
  string build_timestamp = 4;
  string git_commit = 5;
  repeated string capabilities = 6;
}

// CheckCompatibilityRequest is the request for checking compatibility
message CheckCompatibilityRequest {
  string host_api_version = 1;
}

// CheckCompatibilityResponse is the response for checking compatibility
message CheckCompatibilityResponse {
  bool compatible = 1;
  string error_message = 2;
  string min_api_version = 3;
  string max_api_version = 4;
}

// PluginManifest contains metadata about a plugin
message PluginManifest {
  string api_version = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  string author = 5;
  string license = 6;
  string homepage = 7;
  string repository = 8;
  string build_timestamp = 9;
  string git_commit = 10;
  string min_host_version = 11;
  string max_host_version = 12;
  map<string, string> dependencies = 13;
  repeated string capabilities = 14;
  repeated string supported_providers = 15;
}